[tool.poetry]
name = "breachlock-blctl"
version = "0.1.3"
description = "Command-line interface for BreachLock AEV, distributed via pip."
authors = ["Saul Johnson <saul.j@breachlock.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/BreachLock-Inc/blctl-py"
repository = "https://github.com/BreachLock-Inc/blctl-py"
packages = [{include = "blctl"}]
keywords = ["security", "pentesting", "vulnerability-scanning", "breachlock", "devsecops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.4.1"
httpx = "^0.28.1"
pydantic = "^2.13.4"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.poetry.scripts]
blctl = "blctl.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
